--- a/smartband-app/package.json
+++ b/smartband-app/package.json
@@ -20,8 +20,10 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.2",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
@@ -36,6 +38,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
